On branch grid, modified:   aria-practices.html. Interim draft of data grid pattern description.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1514,13 +1514,12 @@
                 <section id="dataGrid" class="notoc">
                 <h4>Data Grid</h4>
                 <p>
-                A data grid is used to present interactive, tabular information that has column titles, row titles, or both.
-                It may also support any or all of selection, cut, copy, paste, and an edit mode that allows data contained in a cell to be modified. 
-                </p>
-                <p>
-                Every data cell in a grid is focusable. 
-                And, if the headers, the cells containing column or row titles,  provide functionality, such as sort or filter, they are also focusable. 
-                </p>
+                A data grid is used to present tabular information that has column titles, row titles, or both.
+                It is particularly useful if the information is editable or interactive. 
+                For example, if some data elements are links to more information, rather than presenting them in a static table and adding all those links to the tab sequence, implementing a data grid provides users with an intuitive and efficient keyboard experience.
+                A grid may also offer functions, such as cell content editing, selection, cut, copy, and paste. 
+                All cells in a data grid are focusable except for celles containing column or row headers, which are focusable if they provide functionality, such as sort or filter. 
+                </p> 
                 <section class="notoc">
         <h5>Keyboard Interaction</h5>
         <p>There are two modes of keyboard interaction: navigation mode and actionable mode.</p>
