On branch grid, modified:   aria-practices.html. Provide text for listbox pattern link to see if it changes respec rendering.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1538,7 +1538,7 @@
                 </p>
                 <p>
                 Because arrow keys are used to move focus inside of a <code>grid</code>, a <code>grid</code> is both easier to build and use if the components it contains do not require the arrow keys to operate.
-                If a cell contains an element like a <a href="#Listbox"></a>, then an extra key command to focus and activate the listbox is needed as well as a command for restoring the grid navigation functionality.
+                If a cell contains an element like a <a href="#Listbox">listbox</a>, then an extra key command to focus and activate the listbox is needed as well as a command for restoring the grid navigation functionality.
                 </p>
                 </section>
                 <section class="notoc">
