--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1511,8 +1511,13 @@
                 </li>
                 <li>If a <code>table</code> contains focusable elements, each of those elements is in the tab sequence. </li>
                 </ul>
+                <p>
+                <code>Grid</code> widgets have a wide variety of uses that broadly fall into two categories: presenting tabular information (data grids) and grouping other widgets (layout grids).
+                While both data grids and layout grids employ the same ARIA roles, states, and properties, the differences in their content and purpose create distinctions that can significantly influence keyboard interface design patterns.
+                The following sections will describe each of these two patterns and how to implement them.
+                </p>
                 <section id="dataGrid" class="notoc">
-                <h4>Grids That Present Tabular Information</h4>
+                <h4>Data Grids For Presenting Tabular Information</h4>
                 <p>
                 A <code>grid</code> can be used to present tabular information that has column titles, row titles, or both.
                 The <code>grid</code> pattern is particularly useful if the tabular information is editable or interactive. 
@@ -1529,7 +1534,7 @@
                 </p> 
                 </section>
                 <section id="layoutGrid" class="notoc">
-                <h4>Grids That Layout and Group Widgets</h4>
+                <h4>Layout Grids for Grouping Widgets</h4>
                 <p>
                 The <code>grid</code> pattern  can be used to group a set of interactive elements into a single tab stop.
                 For example, a <code>grid</code> can dramatically reduce the number of tab stops on a page by using it to group a list of links or checkboxes.
@@ -1543,23 +1548,29 @@
                 </section>
                 <section class="notoc">
         <h4>Keyboard Interaction</h5>
-        <p>There are two modes of keyboard interaction: navigation mode and actionable mode.</p>
-        <p>Navigation Mode (Read-Only) is the default mode, and allows quick and intuitive navigation around the grid.</p>
+        <p>
+        If a grid has one or more cells that either contain multiple interactive elements, a widget that is operable with arrow keys, or editable content, it will need to support toggling between two keyboard interaction modes: a navigation mode for moving focus among cells with arrow keys and a cell interaction mode for interacting with widgets or editable content inside of a cell.
+        </p>
+        <p>The following key commands are used for grid navigation and should be available by default when keyboard focus moves inside a grid. </p>
         <ul>
-          <li>The first <kbd>Tab</kbd> into the grid moves focus to the   first cell of the first row. </li>
-          <li>The second <kbd>Tab</kbd> leaves the grid and moves focus to the next   tabbable item on the page. </li>
-          <li>Subsequent <kbd>Tab</kbd>: Once focus has been moved inside the grid,   subsequent tab presses that re-enter the grid shall return focus to the cell that last   held focus. </li>
-          <li>Right/Left arrow keys navigate through the columns. There is no   wrap at the end or beginning of columns. </li>
-          <li>Up/Down arrow keys navigate through the rows. There is no wrap   at the first or last rows. </li>
-          <li><kbd>Home</kbd> moves the focus to the first cell of the current row. </li>
-          <li><kbd>End</kbd> moves the focus to the last cell in the current row. </li>
+          <li><kbd>Right Arrow</kbd>: Moves focus one cell to the right. If focus is on the right-most cell in the row, focus does not move.</li>
+          <li><kbd>Left Arrow</kbd>: Moves focus one cell to the left. If focus is on the left-most cell in the row, focus does not move.</li>
+          <li><kbd>Down Arrow</kbd>: Moves focus one cell down. If focus is on the bottom cell in the column, focus does not move.</li>
+          <li><kbd>Up Arrow</kbd>: Moves focus one cell Up. If focus is on the top cell in the column, focus does not move.</li>
+          <li><kbd>Page Down</kbd>: Moves focus down an author-determined number of rows, typically scrolling so the bottom row in the currently visible set of rows becomes one of the first visible rows. If focus is in the last row of the grid, focus does not move. </li>
+          <li><kbd>Page Up</kbd>: Moves focus up an author-determined number of rows, typically scrolling so the top row in the currently visible set of rows becomes one of the last visible rows. If focus is in the first row of the grid, focus does not move. </li>
+          <li><kbd>Home</kbd>: moves focus to the first cell in the row that contains focus. </li>
+          <li><kbd>End</kbd>: moves focus to the last cell in the row that contains focus. </li>
+          <li><kbd>Control+Home</kbd>: moves focus to the first cell in the first row. </li>
+          <li><kbd>Control+End</kbd>: moves focus to the last cell in the last row. </li>
+          </ul>
+          <ul>
           <li>Selecting Cells
             <ul>
               <li><kbd>Control + Space</kbd> selects the current column. </li>
               <li><kbd>Shift + Space</kbd> selects the current row. </li>
               <li><kbd>Control + A</kbd> selects the entire grid. </li>
               <li><kbd>Shift + Arrow</kbd> selects contiguous cells. </li>
-              <li><kbd>Shift + F8</kbd> Allows additional cells to be added to a   previous selection to accomplish non-contiguous selection. </li>
             </ul>
             <p class="note">See <a href="#aria_ex_widget">Global Recommendations</a> for information on cut, copy and paste. </p>
           </li>
