--- a/common/acknowledgements.html
+++ b/common/acknowledgements.html
@@ -7,6 +7,7 @@
 			<li>Ann Abbott (IBM Corporation)</li>
 			<li>Michiel Bijl (Invited Expert)</li>
 			<li>Christy Blew (University of Illinois at Urbana-Champaign)</li>
+            <li>Teresa Boers (IBM Corporation)</li>
 			<li>David Bolter (Mozilla Foundation) </li>
 			<li>Michael Cooper (W3C/MIT)</li>
 			<li>James Craig (Apple Inc.) </li>
