On branch grid, modified:   aria-practices.html. Updates to overview of grid pattern.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1513,8 +1513,8 @@
                 </ul>
                 <p>
                 <code>Grid</code> widgets have a wide variety of uses that broadly fall into two categories: presenting tabular information (data grids) and grouping other widgets (layout grids).
-                While both data grids and layout grids employ the same ARIA roles, states, and properties, the differences in their content and purpose create distinctions that can significantly influence keyboard interface design patterns.
-                The following sections will describe each of these two patterns and how to implement them.
+                While both data grids and layout grids employ the same ARIA roles, states, and properties, factors that affect their keyboard interface design arise from the differences in their content and purpose.
+                To address these factors, the following sections describe separate design patterns for data and layout grids.
                 </p>
                 <section id="dataGrid" class="notoc">
                 <h4>Data Grids For Presenting Tabular Information</h4>
